<resources>
    <string name="app_name">Whistle Finder</string>
    <string name="monitoring">Monitoring&#8230;</string>
    <string name="service_stopped">Service Stopped</string>
    <string name="settings">Settings</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="select_sound">Select Custom Sound</string>
    <string name="default_sound">Default</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="russian">Russian</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="arabic">Arabic</string>
    <string name="portuguese">Portuguese</string>
    <string name="hindi">Hindi</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_required">Microphone and Notification permissions are required for this app to work.</string>
    <string name="whistle_detected">Whistle Detected!</string>
</resources>