<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/bg_red"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_red"
        android:alpha="1" />

    <View
        android:id="@+id/bg_green"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:alpha="0" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/settings"
        android:src="@android:drawable/ic_menu_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/neon_green" />

    <View
        android:id="@+id/view_glow"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:alpha="0"
        android:background="@drawable/red_glow_circle"
        app:layout_constraintBottom_toBottomOf="@+id/switch_service"
        app:layout_constraintEnd_toEndOf="@+id/switch_service"
        app:layout_constraintStart_toStartOf="@+id/switch_service"
        app:layout_constraintTop_toTopOf="@+id/switch_service" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_service"
        style="@style/Widget.WhistleFinder.Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="2.5"
        android:scaleY="2.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/service_stopped"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_service" />

    <LinearLayout
        android:id="@+id/layout_permission_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AA000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/permission_required"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_grant_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/neon_green"
            android:text="@string/grant_permission"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>